2014-07-29  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (eval_init): Register nconc as intrinsic.

	* lib.c (nconcv): New function.

	* lib.h (nconcv): Declared.

	* txr.1: Documented nconc.

2014-07-29  Kaz Kylheku  <kaz@kylheku.com>

	* lib.c (reduce_left, reduce_right): Nullify incoming sequence
	argument so empty vectors and strings can be processed.

2014-07-29  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (giterate_func, giterate): Adjusting semantics of giterate to
	include seed item in the sequence. The while test is applied to
	each item before it is passed through the function. Also,
	eliminated useless rplacd operation.

	* txr.1: Updated documentation of giterate.

2014-07-28  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (eval_init): Register partition-by intrinsic.

	* lib.c (partition_by_func): New static function.
	(partition_by): New function.

	* lib.h (partition_by): Declared.

	* txr.1: Documented partition-by.

2014-07-28  Kaz Kylheku  <kaz@kylheku.com>

	* arith.c (rising_product): Fix wrong m == n case,
	which breaks the n_perm_k function for k == 1.

	* txr.1: Fix typo: n-choose-k written in place of n-perm-k.

2014-07-27  Kaz Kylheku  <kaz@kylheku.com>

	Fix 2014-02-05 safety regression: unchecked use of non-function objects
	in some contexts that require functions.

	* lib.c (funcall, funcall1, funcall2, funcall3, funcall4):
	check type(fun) before dereferencing to see whether there
	are optional args.

2014-07-27  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (giterate_func, giterate): New static functions.
	(eval_init): Registered giterate as intrinsic.

	* txr.1: Documented giterate.

2014-07-26  Kaz Kylheku  <kaz@kylheku.com>

	* unwind.h (uw_block_begin): Get rid of the unused typedef trick,
	replace with do { } while (0), since we don't have any instances of a
	uw_block_begin followed by declarations.
	(uw_catch_begin): Move SYMVAR and EXCVAR inside the do/while block,
	so that the expansion doesn't begin with a declaration.
